--- a/frontend/index.html
+++ b/frontend/index.html
@@ -7,6 +7,6 @@
   </head>
   <body>
     <div id="root"></div>
-    <!-- Your bundled React app script will be inserted here -->
+    <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
