--- a/frontend/index.html
+++ b/frontend/index.html
@@ -4,6 +4,11 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Chris Little</title>
+    <style>
+      body {
+        background-color: #181a1b;
+      }
+    </style>
   </head>
   <body>
     <div id="root"></div>
